k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain-tasks-app-service
spec:
  selector:
    app: brain-tasks-app
  type: ClusterIP      # Change this from ClusterIP to LoadBalancer
  ports:
    - protocol: TCP
      port: 80            # External port exposed by the LoadBalancer
      targetPort: 3000    # Container port your app listens on
