k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brain-tasks-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 3000}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
<<<<<<< HEAD
  ingressClassName: alb  # ✅ Add this line
=======
  ingressClassName: alb
>>>>>>> 376cdc2 (changes)
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brain-tasks-app-service
                port:
                  number: 80
